<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/actv_check_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:gravity="center"
        
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        
         
        android:textSize="25dp"
        
        
        />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        

        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:layout_weight="1"
        >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:gravity="center"
        >

        <Button
            android:id="@+id/actv_check_bt_top"
            
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            
            
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
                        
            android:text="@string/actv_check_bt_top"
            android:textSize="25dp" 
            
            
            />

        <Button
            android:id="@+id/actv_check_bt_add"
            
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:text="@string/actv_check_bt_add" 
            android:textSize="25dp"
            />

        <Button
            android:id="@+id/actv_check_bt_bottom"
            
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:text="@string/actv_check_bt_bottom"
            android:textSize="25dp"
            
            />

    </LinearLayout>

</LinearLayout>